--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,18 @@
-# image names (CI / grader will set these)
-BLUE_IMAGE=yourorg/blue-app:latest
-GREEN_IMAGE=yourorg/green-app:latest
+# .env.example
 
-# which pool starts active (blue or green)
+# Set the active pool
 ACTIVE_POOL=blue
 
-# release identifiers forwarded as X-Release-Id by the apps
-RELEASE_ID_BLUE=blue-release-001
-RELEASE_ID_GREEN=green-release-001
+# Container images
+BLUE_IMAGE=yimikaade/wonderful:devops-stage-two
+GREEN_IMAGE=yimikaade/wonderful:devops-stage-two
 
-# optional app internal port
-PORT=3000
+# Release IDs
+RELEASE_ID_BLUE=blue-v1.0.1
+RELEASE_ID_GREEN=green-v1.0.1
 
-# optional fine tune timeouts (strings with s for seconds)
-PROXY_UPSTREAM_CONNECT_TIMEOUT=2s
-PROXY_UPSTREAM_READ_TIMEOUT=5s
-PROXY_NEXT_UPSTREAM_TIMEOUT=6s
+# Port Configuration
+APP_PORT=3000
+NGINX_PORT=8080
+BLUE_PORT=8081
+GREEN_PORT=8082
