--- a/.env
+++ b/.env
@@ -1,9 +1,18 @@
-# .env on your server
+# .env.example
+
+# --- App Configuration ---
+# Set the active pool. Options: "blue" or "green"
 ACTIVE_POOL=blue
+
+# Container images - UPDATED
 BLUE_IMAGE=yimikaade/wonderful:devops-stage-two
 GREEN_IMAGE=yimikaade/wonderful:devops-stage-two
-RELEASE_ID_BLUE=blue-test-v1
-RELEASE_ID_GREEN=green-test-v1
+
+# Release IDs passed to the apps
+RELEASE_ID_BLUE=blue-v1.0.1
+RELEASE_ID_GREEN=green-v1.0.1
+
+# --- Port Configuration ---
 APP_PORT=3000
 NGINX_PORT=8080
 BLUE_PORT=8081
