Update image variables in .env.example

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@
 ACTIVE_POOL=blue
 
 # Container images
-BLUE_IMAGE=yimikaade/wonderful:devops-stage-two
-GREEN_IMAGE=yimikaade/wonderful:devops-stage-two
+BLUE_IMAGE={blueimage}
+GREEN_IMAGE={greenimage}
 
 # Release IDs
 RELEASE_ID_BLUE=blue-v1.0.1
